@@ -34,10 +34,10 @@
 
 int
 purge (const short purge_after, const struct waste_containers *waste,
-        char *time_now);
+        char *time_now, const ushort force);
 
 bool
-is_time_to_purge (bool force);
+is_time_to_purge (ushort force);
 
 short
 orphan_maint(struct waste_containers *waste,
